# CoreGaming

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml  docs.yml
cmake/: sfml.cmake
docs/: Doxyfile  README.md  architecture.md  core.md  platform.md  roadmap.md
packaging/: AppRun.in  coregaming.desktop  game.desktop
src/: CMakeLists.txt  assets.cpp  assets.h  assets.hpp  audio.cpp  audio.h  audio.hpp  camera.h  camera.hpp  collision.hpp  command.hpp  constants.h  constants.hpp  doxygen.h  drawables.h  drawables.hpp  game.cpp  game.h  game.hpp  geometry.h  input.cpp  input.h  input.hpp  main.cpp  movement.hpp  platform.cpp  platform.h  platform.hpp  renderer.cpp  renderer.h  renderer.hpp  textures.cpp  textures.h
src/engine/: camera.h  input.h  renderer.h
src/game/: game.cpp  game.h
src/platform/: README.md  platform.cpp  platform.h  sdl_input.cpp  sdl_input.h  sdl_renderer.cpp  sdl_renderer.h
src/rooms/: RoomBase.hpp  RoomBulletHell.cpp  RoomBulletHell.hpp  RoomGridShow.cpp  RoomGridShow.hpp  RoomHub.cpp  RoomHub.hpp  RoomMaze.cpp  RoomMaze.hpp  RoomPlatformer.cpp  RoomPlatformer.hpp
src/scenes/: BulletHell.cpp  BulletHell.h  BulletHell.hpp  CutSceneWizardSpells.cpp  CutSceneWizardSpells.hpp  GridShow.cpp  GridShow.h  GridShow.hpp  Maze.cpp  Maze.h  Maze.hpp  Platformer.cpp  Platformer.h  Platformer.hpp  RoomBase.hpp  RoomBulletHell.cpp  RoomBulletHell.hpp  RoomGridShow.cpp  RoomGridShow.hpp  RoomHub.cpp  RoomHub.hpp  RoomMaze.cpp  RoomMaze.hpp  RoomPlatformer.cpp  RoomPlatformer.hpp  StateBase.hpp  StatePause.hpp  StatePlaying.cpp  StatePlaying.hpp  WizardSpells.cpp  WizardSpells.h  WizardSpells.hpp  World.cpp  World.hpp  base.h  base.hpp  hub.cpp  hub.hpp  level1.cpp  level1.h  (+5 more)
src/states/: StatePlaying.cpp  StatePlaying.hpp
src/worlds/: World.cpp  World.hpp
tests/: CMakeLists.txt  test_camera.cpp
utility/: CMakeLists.txt  joystick_test.cpp
